@@ -326,9 +326,6 @@ typedef struct
   /* Deprecated functions */
   /************************/
 
-#ifdef TICABLES_DEPRECATED
-#endif
-
 #ifdef __cplusplus
 }
 #endif
